Added styles to External style sheet

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -4,34 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Intro</title>
-    <style>
-        /* Element selector */
-        h1, #hobbies {
-            color: red;
-            background-color: yellow
-        }
-        
-        /* ID selector */
-        #hobbies {
-            border: 2px solid green;
-        }
-
-        /* Apply to all li elements that are children of #hobbies 
-          (any element of that ID) */
-        #hobbies li {
-            background-color: lightblue;
-        }
-
-        /* Pseudo selector (changes li background when mouse hover over) */
-        li:hover, #hobbies li:hover {
-            background: lightgreen;
-        }
-
-        /* Class selector */
-        .big {
-            font-size: 2em;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Heading 1</h1>
